objects/Monthly_Maintenance__c.object
<CustomObject>
    <fields>
        <fullName>Recommendations__c</fullName>
        <label>Recommendations</label>
        <picklist>
            <picklistValues>
                <fullName>DAP Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Goal Driven CTA’s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Focus (specify below)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (specify below)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personalized Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personalized Lead Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Prop / Why buy here?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW Regional Focus</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Restricted_GEO_s__c</fullName>
        <formula>WebID__r.Restricted_GEO_s__c</formula>
        <inlineHelpText>Shows value entered on WebId in the field of the same name</inlineHelpText>
        <label>Dealer Restricted GEOs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_CMR_Dealer_Dashboard__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>- Review CMR, Dealer Dashboard, SEO and PS data</inlineHelpText>
        <label>Review CMR &amp; Dealer Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Dealer_Goals__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>- Review Dealer MAP Goals and on-going website focus</inlineHelpText>
        <label>Review Dealer Goals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Frequency__c</fullName>
        <label>Review Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_Natural_Mutations__c</fullName>
        <inlineHelpText>Describe mutation findings, strategy, analysis, etc.</inlineHelpText>
        <label>Review Natural Mutations</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Responses__c</fullName>
        <label># Review Responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reviews_Posted_to_Site__c</fullName>
        <label># Reviews Posted to Site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEO_MM_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be updated by the nightly MM program through the Services database.</description>
        <inlineHelpText>This link will open the SEO’s MM record for the same month.</inlineHelpText>
        <label>SEO MM Link</label>
        <referenceTo>Monthly_Maintenance__c</referenceTo>
        <relationshipLabel>Monthly Maintenance (SEO MM Link)</relationshipLabel>
        <relationshipName>Monthly_Maintenance3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SEO_Quality_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Managers to check box for MM reviews they have completed</description>
        <inlineHelpText>Managers to check box for MM reviews they have completed</inlineHelpText>
        <label>SEO Quality Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEO_Specialist__c</fullName>
        <description>This field pulls the value from the Webid.</description>
        <formula>IF( WebID__r.PowerSEO_Product__c&gt; 0, &quot;PowerSEO: &quot;, 
IF( WebID__r.Procare_Product__c&gt; 0, &quot;SEO: &quot;, &quot;&quot;))&amp; 
WebID__r.SEO_Specialist__r.FirstName &amp;&quot; &quot;&amp; WebID__r.SEO_Specialist__r.LastName &amp; 
IF( isblank(WebID__r.SEO_Specialist__r.Extension ), &quot;&quot;, &quot; - Ext: &quot;&amp; WebID__r.SEO_Specialist__r.Extension )</formula>
        <label>SEO Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Targeted_Geographies__c</fullName>
        <formula>WebID__r.SEO_Targeted_Geographies__c</formula>
        <label>Currently Targeted GEOs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Website_Scan_Tool_URL__c</fullName>
        <formula>WebID__r.SEO_Website_Scan_Tool_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SEO: Website Scan Tool URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Number__c</fullName>
        <label>SR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Sales Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <description>EMS Monthly Maintenance - Sales Campaigns</description>
        <inlineHelpText>Campaigns that begin with 01- will mark this as sent.</inlineHelpText>
        <label>Sales</label>
        <picklist>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Schedule_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Send Event invite from within Salesforce to all call attendees</inlineHelpText>
        <label>Schedule Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Attempts__c</fullName>
        <inlineHelpText>Enter number of times you have attempted to contact the secondary contact.  This field is for the use of the record owner to assist with workflow only and is not used for reporting.</inlineHelpText>
        <label>Secondary Contact Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Status__c</fullName>
        <label>Secondary Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Call_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>- Send one day prior to call using &quot;reminder&quot; email template
 - Send to all scheduled attendees</inlineHelpText>
        <label>Send Call Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_ReCap_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>- Send after optimization call using &quot;re-cap&quot; email template
 - Send to DP/DM and all call attendees</inlineHelpText>
        <label>Send ReCap Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Parts_Pages__c</fullName>
        <formula>WebID__r.Service_Parts_Pages__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the value entered on the WebID in the field of the same name.</inlineHelpText>
        <label>Service &amp; Parts Pages</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Service Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>EMS Monthly Maintenance - Service campaigns</description>
        <inlineHelpText>Campaigns that start with 02- will mark this as sent</inlineHelpText>
        <label>Service</label>
        <picklist>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Check_Status__c</fullName>
        <inlineHelpText>1) HOME PAGE - Perform check of:  Spelling, Masthead, Images, Calls to Action, SEO Text, Navigation, and Current Specials.  2) INTERIOR PAGES – Perform check of:  Current Specials, Lead Forms and CTN.</inlineHelpText>
        <label>Site Check Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <color>#E27001</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - No Changes</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - With Changes</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Review_Status__c</fullName>
        <inlineHelpText>Plus (+) = If the site meets 2 below:
* Greater than OEM referral percentage change 
* Steady or increase in rankings for brand term and physical location 
* Steady or increase in rankings for additional areas 
Minus (-) = does not meet 2 above</inlineHelpText>
        <label>Site Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Update_Cases__c</fullName>
        <label># Site Update Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sitemap_Present__c</fullName>
        <label>Sitemap Present</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_Recommendations__c</fullName>
        <label>Recommendations</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Social_Service_Type__c</fullName>
        <formula>Text( WebID__r.Social_Service__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows service type from WebId.  If this value appears incorrect please speak with your Manager to have them update the WebId field.</inlineHelpText>
        <label>Social Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_or_Onstation_WebId_on_Account__c</fullName>
        <description>This is calculated based on the Social/Rep Mgmt Product roll up field that shows up on the WebId record and the Owner Marketing Product field from the account.</description>
        <formula>IF( And(
WebID__r.Social_Rep_Mgmt_Product__c = 0,
Account__r.Owner_Marketing_Product__c = 0), &quot;No&quot;,
IF(And(
WebID__r.Social_Rep_Mgmt_Product__c &gt; 0,
Account__r.Owner_Marketing_Product__c = 0
),&quot;Social/Rep Mgmt on Account&quot;,
IF(And(
WebID__r.Social_Rep_Mgmt_Product__c = 0,
Account__r.Owner_Marketing_Product__c &gt; 0
),&quot;Onstation on Account&quot;,
IF(And(
WebID__r.Social_Rep_Mgmt_Product__c &gt; 0,
Account__r.Owner_Marketing_Product__c &gt; 0
),&quot;Social/Rep and Onstation on Account&quot;,&quot;&quot;
))))</formula>
        <inlineHelpText>If this field indicates the presence of Social/Rep or Onstation, use the WebId List link to the right to view the rest of the account team.</inlineHelpText>
        <label>Social or Onstation WebId on Account?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Considerations__c</fullName>
        <label>Special Considerations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Project_Status__c</fullName>
        <description>This field was initially created for VW Social @ Retail project. Generic name given in case we can use it again for other needs.</description>
        <inlineHelpText>This field will indicate if you have any action items for a currently running special project or program.</inlineHelpText>
        <label>Special Project Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spoke_To__c</fullName>
        <inlineHelpText>Shows the total number of activities logged this month where the type is listed as &quot;Spoke To.&quot;</inlineHelpText>
        <label># Spoke To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Number__c</fullName>
        <description>This field is not intended for display on any page layouts. This is strictly a formula field to be used for an Account Plan Rollup Field (This Month&apos;s Min Status).</description>
        <formula>IF(ISPICKVAL(Status__c, &quot;Not Started&quot;) = True, 1, 
IF(ISPICKVAL(Status__c, &quot;New&quot;) = True, 2, 
IF(ISPICKVAL(Status__c, &quot;Open&quot;) = True, 3, 
IF(ISPICKVAL(Status__c, &quot;In Progress&quot;) = True, 4, 
IF(ISPICKVAL(Status__c, &quot;On Hold&quot;) = True, 5, 
IF(ISPICKVAL(Status__c, &quot;Waiting for Approval&quot;) = True, 6, 
IF(ISPICKVAL(Status__c, &quot;Locked Site&quot;) = True, 7, 
IF(ISPICKVAL(Status__c, &quot;Cancelled&quot;) = True, 8, 
IF(ISPICKVAL(Status__c, &quot;Expired&quot;) = True, 9, 
IF(ISPICKVAL(Status__c, &quot;Completed - No Update Needed&quot;) = True, 10, 
IF(ISPICKVAL(Status__c, &quot;Completed&quot;) = True, 11, 
IF(ISPICKVAL(Status__c, &quot;N/A&quot;) = True, 12, 0) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Any time a new value is added to this field, modify the Open Status field.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <color>#E27001</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Approval</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Locked Site</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - No Update Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stop_Clone_Date__c</fullName>
        <inlineHelpText>Enter last day of month to signify Pro-care cancel so the Monthly Maintenance record will stop being cloned for the following month.</inlineHelpText>
        <label>Stop Clone Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strategy_Product__c</fullName>
        <description>This field is primarily populated by the stored procedure that creates records for the DAA Strategy record type on a monthly basis.  This is also available for the DAA to manually choose when they need to create an additional record.</description>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>DAP Core - Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP New Flex - Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP Core - Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP New Flex - Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP Core - Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP New Flex - Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP New Flex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP S&amp;P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ReMarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerSearch Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerSearch Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerDisplay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerBrand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB Fixed Ops - Tires</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB Fixed Ops - Maintenance &amp; Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB Fixed Ops - Bodyshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB Fixed Ops - Part &amp; Accessories</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Directories__c</fullName>
        <label>Submitted Directories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Suggested_Focus_Area__c</fullName>
        <formula>HYPERLINK(&quot;/00O40000003CJTZ?pv0=&quot;&amp; text(Focus_Area_Recommended_Timing__c) , 
 text(Focus_Area_Recommended_Timing__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Focus Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teaming_Comments__c</fullName>
        <label>Teaming Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Teaming_Status__c</fullName>
        <description>This field will be updated by the nightly MM program through the Services database.</description>
        <inlineHelpText>If teaming is recommended this month and has not been completed then this field will display &quot;Teaming Recommended.&quot;

If teaming has occurred this month then this field will show &quot;Teaming Completed.&quot;</inlineHelpText>
        <label>Teaming Status</label>
        <picklist>
            <picklistValues>
                <fullName>Teaming Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaming Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testimonial_Site_Ranking__c</fullName>
        <inlineHelpText>Enter rankings using Dealer Name search using Google.</inlineHelpText>
        <label>Testimonial Site Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>This_Account_s_WebId_List__c</fullName>
        <description>This pulls up the webid related list from the account.</description>
        <formula>HYPERLINK(&quot;/a1M?rlid=00N40000002aUKr&amp;id= &quot; &amp;  Account__r.Id , &quot;WebId List&quot;)</formula>
        <label>This Account’s WebId List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>This_Month__c</fullName>
        <description>Not meant to display on a page layout. This field was created to indicate whether or not the record is due in the current month for Roll-up Formula purposes.  This will be populated by a stored procedure.</description>
        <label>This Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Welcome Call/Getting Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt&apos;s Approach To RepMan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asking for Feedback, Not Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Presence Reflects Offline Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Getting Staff On-board w/ RepMan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCC Overview: Deep Dive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identifying Staff Training Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How To Respond to Survey Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Importance of Email Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asking Customers for Email Addresses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurate Customer Email Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rewarding Staff for Positive Customer Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Practices on Using the Survey Notifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Plus Review Response Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yelp Review Response Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Practices for Responding to Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yelp Check-in Specials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yelp Deals &amp; Gift Certificates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Offers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Understanding 3rd Party Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Apps for 3rd Party Listings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Product Mix</label>
        <picklist>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social - No Community Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social w/ Community site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerSEO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL_Changed_Date__c</fullName>
        <description>Date the URL was changed</description>
        <label>URL Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <formula>Account__r.Account_Number__c + &apos;-&apos; + WebID__r.External_ID__c + &apos;-&apos; +  RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>- Update website with changes as discussed</inlineHelpText>
        <label>Update Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WebID_Notes__c</fullName>
        <formula>WebID__r.Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WebID Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebID</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Value does not exist or does not match filter criteria. Note: You may need to correct the Account or the WebId associated to this record.  Some Account Names are the same for different Accounts.  Use the Account Number to verify the correct Account.</errorMessage>
            <filterItems>
                <field>WebID__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>Monthly Maintenance</relationshipLabel>
        <relationshipName>Monthly_Maintenance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WebID_for_Hub_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebID for Hub Site</label>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>Monthly Maintenance (WebID for Hub Site)</relationshipLabel>
        <relationshipName>Monthly_Maintenance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Webmaster_Tools_Login_Submitted_to__c</fullName>
        <formula>Text(WebID__r.Webmaster_Tools_Login_Submitted_to__c )</formula>
        <inlineHelpText>Shows value entered on WebId in the field of the same name.</inlineHelpText>
        <label>Google Webmaster Tools Submitted To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Scan_Tool_URL__c</fullName>
        <formula>WebID__r.Website_Scan_Tool_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AA: Website Scan Tool URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Search_String__c</fullName>
        <inlineHelpText>Enter first search string used to determine rankings on Google, Yahoo and Bing.</inlineHelpText>
        <label>1st Search String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_String_Bing_Ranking__c</fullName>
        <inlineHelpText>Enter Bing ranking for first search string.</inlineHelpText>
        <label>1st String Bing Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1st_String_Google_Ranking__c</fullName>
        <inlineHelpText>Enter Google ranking for first search string.</inlineHelpText>
        <label>1st String Google Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1st_String_Yahoo_Ranking__c</fullName>
        <inlineHelpText>Enter Yahoo ranking for first search string.</inlineHelpText>
        <label>1st String Yahoo Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2nd_Search_String__c</fullName>
        <inlineHelpText>Enter first search string used to determine rankings on Google, Yahoo and Bing.</inlineHelpText>
        <label>2nd Search String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_String_Bing_Ranking__c</fullName>
        <inlineHelpText>Enter Bing ranking for second search string.</inlineHelpText>
        <label>2nd String Bing Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2nd_String_Google_Ranking__c</fullName>
        <inlineHelpText>Enter Google ranking for second search string.</inlineHelpText>
        <label>2nd String Google Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2nd_String_Yahoo_Ranking__c</fullName>
        <inlineHelpText>Enter Yahoo ranking for second search string.</inlineHelpText>
        <label>2nd String Yahoo Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3rd_Search_String__c</fullName>
        <inlineHelpText>Enter first search string used to determine rankings on Google, Yahoo and Bing.</inlineHelpText>
        <label>3rd Search String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_String_Bing_Ranking__c</fullName>
        <inlineHelpText>Enter Bing ranking for third search string.</inlineHelpText>
        <label>3rd String Bing Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3rd_String_Google_Ranking__c</fullName>
        <inlineHelpText>Enter Google ranking for third search string.</inlineHelpText>
        <label>3rd String Google Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3rd_String_Yahoo_Ranking__c</fullName>
        <inlineHelpText>Enter Yahoo ranking for third search string.</inlineHelpText>
        <label>3rd String Yahoo Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X5_Star_Customer__c</fullName>
        <label>5 Star Customer</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X5_Star_Review_Last_Update__c</fullName>
        <formula>WebID__r.X5_Star_Review_Last_Update__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 Star Review Last Update</label>
        <type>Date</type>
    </fields>
</CustomObject>